[package]
name = "nodes-parse"
license = "MIT"
version = "1.0.0-beta.1"
edition = "2021"
description = "A few structs to parse the nodes.json of Freifunk Hannover."
readme = "README.md"
repository = "https://github.com/moridius/nodes-parse"
keywords = ["freifunk", "gluon", "nodes.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = { version = "1.1.8", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", optional = true, features = ["serde"] }

[dev-dependencies]
ureq = "3.0.10"

[features]
default = []
chrono = ["dep:chrono"]
